--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
 <body>
 <div class="calculator-container">
     <h2>Calculadora</h2>
-    <input type="text" id="num1" placeholder="Número 1">
+    <input type="number" id="num1" placeholder="Número 1" required>
     <select id="operator">
         <option value="+">+</option>
         <option value="-">-</option>
         <option value="*">*</option>
         <option value="/">/</option>
     </select>
-    <input type="text" id="num2" placeholder="Número 2">
+    <input type="number" id="num2" placeholder="Número 2" required>
     <button onclick="calculate()">Calcular</button>
 
     <h3>Histórico (últimos 5 cálculos)</h3>
